--- a/public/index.html
+++ b/public/index.html
@@ -16,26 +16,19 @@
         <img class="page-header__logo" src="img/logo.png" width="42" height="42" alt="Trip logo">
 
         <div class="trip-main">
-          <section class="trip-main__trip-info  trip-info">
-            <!-- Маршрут -->
-          </section>
-
-          <div class="trip-main__trip-controls  trip-controls">
-            <!-- Меню -->
-            <!-- Фильтры -->
-          </div>
-
-          <button class="trip-main__event-add-btn  btn  btn--big  btn--yellow" type="button">New event</button>
+            <!-- TripInfo -->
+            <!-- TripControls -->
+            <!-- NewEventButton -->
         </div>
       </div>
     </header>
     <main class="page-body__page-main  page-main">
       <div class="page-body__container">
           <section class="trip-events">
-            <h2 class="visually-hidden">Trip events</h2>
-            <!-- Сортировка -->
-            <!-- Контент -->
-          </section>
+              <h2 class="visually-hidden">Trip events</h2>
+              <!-- TripSort -->
+              <!-- DayList -->
+            </section>`
       </div>
     </main>
     <script src="bundle.js"></script>
