Statistics page beginning

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
     <main class="page-body__page-main  page-main">
       <div class="page-body__container">
           <!-- TripEvents -->
+          <!-- Statistics -->
       </div>
     </main>
     <script src="bundle.js"></script>
