--- a/public/index.html
+++ b/public/index.html
@@ -29,5 +29,10 @@
       </div>
     </main>
     <script src="bundle.js"></script>
+    <script>
+      if (`serviceWorker` in navigator) {
+        navigator.serviceWorker.register(`sw.js`);
+      }
+    </script>
   </body>
 </html>
